<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_item_layout"
    android:layout_width="wrap_content"
    android:layout_height="240dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/image_product"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:contentDescription="@string/product_image_description"
        android:src="@drawable/image_stub"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title_product"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/product_title_stub"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/text_price_product"
        app:layout_constraintEnd_toEndOf="@+id/image_product"
        app:layout_constraintStart_toStartOf="@+id/image_product"
        app:layout_constraintTop_toTopOf="@+id/guideline_top" />

    <TextView
        android:id="@+id/text_price_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_stub"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/image_basket"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/image_basket"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/move_to_basket_description"
        android:src="@drawable/basket_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_price_product" />
</androidx.constraintlayout.widget.ConstraintLayout>